[tool.poetry]
name = "pitvolut"
version = "0.1.0"
description = "Revolut transactions parser for Polish PIT-38 tax declaration"
authors = ["Jan Tymiński <tymikk@gmail.com>"]
repository = "https://github.com/tymik/pitvolut"
readme = "README.md"
packages = [{include = "pitvolut", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12.3"
PyPDF2 = "^3.0.0"
pydantic = "^2.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
